fixed filterMenu and added some styles, just need to fix the likes option, it is showing it in reverse order(least to greatest).  Waiting on response from guy on Stack Overflow to respond

--- a/client/main.css
+++ b/client/main.css
@@ -104,7 +104,7 @@ a:hover, a:visited{
 }
 @media only screen and (max-width: 400px) {
   body{
-    padding-top: 15vh;
+    padding-top: 3vh;
   }
   .removeOnSmallDevice{
     display:none;
@@ -191,9 +191,3 @@ input{
   border:none;
 }
 /*filter notes menu*/
-
-.filterOption{
-  margin-right: 20px;
-  color:red;
-  cursor: pointer;
-}
