--- a/client/stylesheets/fullSize.css
+++ b/client/stylesheets/fullSize.css
@@ -1,13 +1,10 @@
 #delete_button{
-  background:none;
+  background:#E23E57;
   border:3px #E23E57 solid;
   border-radius: 5px;
   width: 100px;
   height: 55px;
   font-size: 1.4em;
   color: rgb(15, 15, 15);
-}
-#delete_button:hover{
-  background: #E23E57;
   color:white;
 }
