--- a/client/stylesheets/menu.css
+++ b/client/stylesheets/menu.css
@@ -7,7 +7,7 @@
   top:0px;
   z-index: 10;
   border-bottom: 0.4px solid #C0C5CD;
-  transition: 0.7s ease-in-out;
+  transition: 0.28s ease-in-out;
 }
 .menu:hover > .menu-item{
   opacity:1;
@@ -20,7 +20,7 @@
   display:block;
   opacity:0;
   height: 0vh;
-  transition: 0.2s ease-in-out;
+  transition: 0.28s ease-in-out;
   border-bottom: 0.7px solid #C0C5CD;
 }
 .menu-item-extend{
@@ -29,4 +29,36 @@
 }
 .noStyle{
   border: none;
+}
+/*filter Notes menu*/
+.filterOption{
+  margin-right: 20px;
+  cursor: pointer;
+}
+.filterMenu{
+  width: 100%;
+  height: 10vh;
+  padding: 10px;
+  text-align: center;
+}
+.filterMenu input[type="radio"]{
+  display:none;
+}
+.filterMenu label{
+  min-width:10%;
+  height: 2.5vh;
+  border-radius: 5px;
+  border: 0.5px solid #C0C5CD;
+  border:none;
+}
+.filterMenu input[type="radio"]:checked + label{
+  background:#ddd;
+}
+@media only screen and (max-width: 645px) {
+  .filterMenu label{
+    display: block;
+  }
+  .filterMenu input[type="text"] {
+    width: 100%;
+  }
 }
